image path update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <article class="recipe-page">
         <header>
           <div class="image">
-            <img src="assets/images/image-omelette.jpeg" alt="" />
+            <img src="./assets/images/image-omelette.jpeg" alt="" />
           </div>
           <h1>Simple Omelette Recipe</h1>
 
